refactoring dynamic filters: ListFieldName, ContainsFieldName, LessThanFieldName, GreaterThanFieldName, GreaterThanOrEqualFieldName, LessThanOrEqualFieldName

--- a/Common.WebApi/appsettings.json
+++ b/Common.WebApi/appsettings.json
@@ -33,13 +33,13 @@
     }
   },
   "DynamicFiltersConfiguration": {
-    "AssemblyModelName": "Common.Domain",
-    "Max": "max",
-    "Min": "min",
-    "From": "from",
-    "To": "to",
-    "Contains": "contains",
-    "List": "list"
+    "AssemblyModelName": "Saal.Photo.Domain",
+    "LessThanOrEqualFieldName": "lessThanOrEqual",
+    "GreaterThanOrEqualFieldName": "greaterThanOrEqual",
+    "GreaterThanFieldName": "greaterThan",
+    "LessThanFieldName": "lessThan",
+    "ContainsFieldName": "contains",
+    "ListFieldName": "list"
   },
   "Cors": {
     "AuthorizedOrigins": [
