Generate generic response type in Swagger documentation

--- a/Common.WebApi/appsettings.json
+++ b/Common.WebApi/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "DBConnectionString": "Server=localhost;User Id=sa;Password=12345678Aa@;Database=TestPhotoSessions;Integrated Security=false;Trusted_Connection=false;TrustServerCertificate=true",
+  "DBConnectionString": "Server=localhost;Database=TestPhotoSessions;Integrated Security=true;Trusted_Connection=true;TrustServerCertificate=true",
   "CheckMigrations": "false",
   "Logging": {
     "LogLevel": {
@@ -11,7 +11,7 @@
   "JwtSettings": {
     "Key": "re9FBxDRzz00SEZmGAxP7dOXGttDVPPJ",
     "Audience": "Test",
-    "Issuer": "Common.WebApi",
+    "Issuer": "WebApi",
     "ExpirySeconds": 86400,
     "RequireAudience": false,
     "RequireLifetime": true,
@@ -33,7 +33,7 @@
     }
   },
   "DynamicFiltersConfiguration": {
-    "AssemblyModelName": "Saal.Photo.Domain",
+    "AssemblyModelName": "Common.Domain",
     "LessThanOrEqualFieldName": "lessThanOrEqual",
     "GreaterThanOrEqualFieldName": "greaterThanOrEqual",
     "GreaterThanFieldName": "greaterThan",
